--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Treasure for men's clothing, women's, jewelery & electronics. Check out all trends"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Treasure</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
